--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,34 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+    <servlet>
+    <description></description>
+    <display-name>IncrementDecrementServlet</display-name>
+    <servlet-name>IncrementDecrementServlet</servlet-name>
+    <servlet-class>pets.servlet.IncrementDecrementServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>IncrementDecrementServlet</servlet-name>
+    <url-pattern>/quantity-inc-dec</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>RemoveFromCartServlet</display-name>
+    <servlet-name>RemoveFromCartServlet</servlet-name>
+    <servlet-class>pets.servlet.RemoveFromCartServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>RemoveFromCartServlet</servlet-name>
+    <url-pattern>/remove-from-cart</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddToCartServlet</display-name>
+    <servlet-name>AddToCartServlet</servlet-name>
+    <servlet-class>pets.servlet.AddToCartServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddToCartServlet</servlet-name>
+    <url-pattern>/add-to-cart</url-pattern>
+  </servlet-mapping>
 </web-app>
